<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <EditText android:id="@+id/edit_message"
        
        android:layout_width="0dp"
        android:layout_height="50dip"
        android:hint="@string/edit_message"/>

		<Button
		    android:id="@+id/Button02"
		    android:layout_width="match_parent"
		    android:layout_height="50dip"
		    android:layout_below="@+id/Button04"
		    android:layout_centerHorizontal="true"
		    android:onClick="sendMessage"
		    android:text="@string/button_send" />

   <Button
       android:id="@+id/Button01"
       android:layout_width="match_parent"
       android:layout_height="50dip"
       android:layout_alignLeft="@+id/Button02"
       android:layout_alignParentTop="true"
       android:onClick="MainActivityap"
       android:text="@string/button_next"
       android:textStyle="bold" />

   <Button
       android:id="@+id/Button04"
       android:layout_width="match_parent"
       android:layout_height="50dip"
       android:layout_alignLeft="@+id/Button02"
       android:layout_below="@+id/Button01"
       android:onClick="nextPage2"
       android:text="@string/button_next2" />

   <Button
       android:id="@+id/Button03"
       android:layout_width="match_parent"
       android:layout_height="50dip"
       android:layout_alignLeft="@+id/Button02"
       android:layout_below="@+id/Button02"
       android:onClick="nextList"
       android:text="@string/button_list" />
 <Button
        android:id="@+id/Button06"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_alignLeft="@+id/Button03"
        android:layout_below="@+id/Button05"
        android:onClick="webview1"
        android:text="Go to http://www.google.com" />
   <Button
       android:id="@+id/Button05"
       android:layout_width="match_parent"
       android:layout_height="50dip"
       android:layout_alignLeft="@+id/Button03"
       android:layout_below="@+id/Button03"
       android:onClick="nextPage3"
       android:text="@string/button_next3" />

   </RelativeLayout>
   
